@@ -34,6 +34,7 @@
         <setting id="linesplit" type="enum" label="32628" lvalues="32629|32630|32631" default="1" />
         <setting id="prem.identify" type="select" label="32588" lvalues="32201|32202|32203|32204|32205|32206|32207|32208|32209|32210|32211|32212|32213|32214|32215|32216|32217|32218|32219|32220|32221" default="20" enable="!eq(-1,2)"/>
         <setting id="sec.identify" type="select" label="32626" lvalues="32201|32202|32203|32204|32205|32206|32207|32208|32209|32210|32211|32212|32213|32214|32215|32216|32217|32218|32219|32220|32221|32200" default="16" enable="!eq(-2,2)"/>
+        <setting id="source.list.meta" type="bool" label="Enable metadata on source list" default="true" enable="eq(-8,1)" />
         <setting type="lsep" label="32338" />
         <setting id="hosts.quality" type="enum" label="32339" values="4K|1080p|720p|SD" default="0" />
         <setting id="autoplay.sd" type="bool" label="32620" default="false" />
@@ -43,6 +44,8 @@
         <setting id="debrid.only" type="bool" label="32621" default="false" />
         <setting id="cf.disable" type="bool" label="32362" default="false" />
         <setting id="remove.dups" type="bool" label="32090" default="true" />
+        <setting id="check.torr.cache" type="bool" label="Verify torrents cache" default="true" />
+        <setting type="text" label="Expiremental - currently only Real-Debrid is supported" enable="false" />
         <setting id="torrent.min.seeders" type="slider" label="Minimum Seeders" visible="false" default="1" range="1,100" option="int" />
         <setting type="lsep" label="32343" />
         <setting id="bookmarks" type="bool" label="32344" default="true" />
