@@ -1,3 +1,8 @@
+[B][COLOR gold]v2.0.0[/COLOR][/B]
+- Added Real-Debrid torrents cache check
+    *Expiremental. Most code adjusted from Fen add-on - many thanks
+- Added option to remove metadata from directory source list, for faster loading
+
 [B][COLOR gold]v1.9.32[/COLOR][/B]
 - Fixed Clean Settings File function for Kodi versions older than 18 (thx Tikipeter!)
 - More code cleanup (Note: re-set your "Max Quality" setting - 1440p option has been removed)
